# libre2d

./: README.org  meson.build  meson_options.txt
include/: meson.build
include/libre2d/: buffer.h  component.h  geometry.h  meson.build  model.h  model_loader.h  transformer.h  utils.h
include/libre2d/internal/: meson.build  stb_image.h
include/libre2d/transformer/: .substitution.h.swo  meson.build  rotation.h  substitution.h
src/: meson.build
src/libre2d/: component.cpp  geometry.cpp  meson.build  model.cpp  model_loader.cpp  transformer.cpp  utils.cpp
src/libre2d-editor/: meson.build
src/libre2d/transformer/: meson.build  rotation.cpp  substitution.cpp
src/qauctor/: canvas.cpp  canvas.h  main.cpp  main_window.cpp  main_window.h  meson.build
test/: meson.build  render.cpp
test/test-face/: extract-points.py  face-topology.xcf  left-eye-topology.xcf  mouth-topology.xcf  right-eye-topology.xcf  test-face.xcf  texture.xcf
